--- a/Example/package.json
+++ b/Example/package.json
@@ -8,14 +8,21 @@
   },
   "dependencies": {
     "react": "16.6.3",
-    "react-native": "0.58.4"
+    "react-native": "0.58.4",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
+    "@types/react": "^16.8.2",
+    "@types/react-native": "^0.57.34",
+    "@types/react-redux": "^7.0.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "24.1.0",
     "jest": "24.1.0",
     "metro-react-native-babel-preset": "0.51.1",
-    "react-test-renderer": "16.6.3"
+    "react-native-typescript-transformer": "^1.2.11",
+    "react-test-renderer": "16.6.3",
+    "typescript": "^3.3.1"
   },
   "jest": {
     "preset": "react-native"
