--- a/Example/package.json
+++ b/Example/package.json
@@ -10,7 +10,8 @@
     "react": "16.6.3",
     "react-native": "0.58.4",
     "react-redux": "^6.0.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "simple-react-native-dialog": "0.0.6"
   },
   "devDependencies": {
     "@types/react": "^16.8.2",
