--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-react-native-dialog",
-  "version": "1.0.0.",
+  "version": "1.0.0",
   "description": "Simple react native dialog",
   "main": "index.js",
   "scripts": {
