--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "react-native"
+    "react-native",
+    "dialog",
+    "alert",
+    "android",
+    "popup",
+    "ios"
   ],
   "author": "Subhadip Majumder <aryan.majumder@gmail.com>",
   "license": "ISC",
